tdf#113112 insert a new sheet slow

We were spending vast amounts of time in ScColumn::EndListening calling
set_empty on the mdds_vector, which moved the block data around.

So walk backwards through the data, which means we will delete from the
end, and largely avoid any expensive moving around.

Change-Id: If2266fe714a809d4b5c725d49d7399b3161fe023